Edit login page

--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
     <form action="" class="login__form">
       <input type="email" placeholder="E-mail" class="login__input input input__email">
       <input type="password" placeholder="Пароль" class="login__input input input__password">
+      <button class="input__password-view-button"></button>
     </form>
     <a href="#" class="login__forgot-text">Забыли пароль?</a>
     <button class="login__primary-button primary-button">Войти</button>
