--- a/search.html
+++ b/search.html
@@ -77,9 +77,14 @@
           </div>
         </div>
       </div>
-      
-
-    </div>
+      <div class="tabbar">
+        <div class="tabbar_buttons">
+          <button class="tabbar_button tabbar_button_home tabbar_button_active"></button>
+          <button class="tabbar_button tabbar_button_statistic"></button>
+          <button class="tabbar_button tabbar_button_profile"></button>
+          <button class="tabbar_button tabbar_button_setting"></button>
+        </div>
+      </div>
+    </div>    
   </body>
-
 </html>
