Add test page, first qustion, interactive button

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="login-page">
+  <div class="login-page container">
     <h1 class="login-page_title title">С возвращением!</h1>
     <p class="login-page_text text">Введите свои данные или<br>войдите с помощью социальных сетей</p>
     <form action="" class="login-form login-page_login-form">
