--- a/search.html
+++ b/search.html
@@ -14,8 +14,8 @@
   </head>
 
   <body>
-    <div class="search-page">
-      <svg class="search-page_return-button" width="14" height="25" viewBox="0 0 14 25" fill="none"
+    <div class="search-page container">
+      <svg class="return-button" width="14" height="25" viewBox="0 0 14 25" fill="none"
         xmlns="http://www.w3.org/2000/svg">
         <path d="M12.5 23L2 12.5L12.5 2" stroke="#1A1D1E" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
