--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="signup-page">
+  <div class="signup-page container">
     <h1 class="signup-page_title title">Регистрация</h1>
     <p class="signup-page_text text">Введите свои данные или<br>войдите с помощью социальных сетей</p>
     <form action="" class="login-form signup-page_login-form">
