Add first and last question pages

--- a/test-first.html
+++ b/test-first.html
@@ -43,15 +43,16 @@
           fill="white" />
       </svg>
       <p class="test-page_test-title">Business Analitycs · ч.3</p>
-      <div class="question-field field">
-        <p class="question-field_question-number">Вопрос 1 из 24</p>
-        <p class="question-field_question">В чем заключается основная цель BPMN-диаграммы?</p>
+      <div class="qustion-block">
+        <div class="question-field field">
+          <p class="question-field_question-number">Вопрос 1 из 24</p>
+          <p class="question-field_question">В чем заключается основная цель BPMN-диаграммы?</p>
+        </div>
+        <input type="text" placeholder="Краткий ответ" class="answer-field field">
       </div>
-      <input type="text" placeholder="Краткий ответ" class="answer-field field">
       <div class="button-group">
         <button class="answer-button primary-button primary-button_disable">Ответить</button>
         <button class="secondary-button">Пропустить</button>
-        <button class="secondary-button">Назад</button>
       </div>
     </div>
     <script src="./script/script.js"></script>
