Fix modal window overflow

--- a/search.html
+++ b/search.html
@@ -106,7 +106,7 @@
         </ul>
       </nav>
     </div>
-    {<div class="filter-window translate-down">
+    <div class="filter-window translate-down">
       <div class="filter-window_line">
         <svg width="80" height="4" viewBox="0 0 80 4" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect width="80" height="4" rx="2" fill="#E1E1E1" />
@@ -211,8 +211,7 @@
           <span class="filter-authors_all">Все</span>
         </div>
       </div>
-      <button class="show-results_button primary-button">Показать 35
-        результатов</button>
+      <button class="show-results_button primary-button">Показать 35 результатов</button>
     </div>
     <div class="test filter-window_background blackout-off"></div>
     <script src="./script/script.js"></script>
