--- a/search.html
+++ b/search.html
@@ -38,7 +38,11 @@
               <div class="search-item_name">UI/UX Designer</div>
             </div>
             <div class="search-item_column">
-              <button class="search-item_fav-button"></button>
+              <button class="search-item_fav-button">
+                <svg class="fav-button" width="15.1" height="13.8" viewBox="0 0 15.1 13.8" fill="#C8C6DE" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11.0552 1.09835e-08C10.3402 0.00012472 9.63818 0.190537 9.02116 0.551683C8.40413 0.912829 7.89435 1.4317 7.54415 2.055C7.19388 1.43155 6.68394 0.912586 6.06672 0.55143C5.4495 0.190275 4.74727 -5.27909e-05 4.03215 1.09835e-08C2.93693 0.0591506 1.90667 0.53826 1.15569 1.33766C0.404716 2.13707 -0.00916265 3.19522 0.000153943 4.292C0.000153943 9.885 7.54415 13.787 7.54415 13.787C7.54415 13.787 15.0882 9.887 15.0882 4.292C15.0975 3.19506 14.6834 2.13676 13.9323 1.33733C13.1811 0.537904 12.1506 0.0589022 11.0552 1.09835e-08V1.09835e-08Z"/>
+                </svg>
+              </button>
               <span class="search-item_date">06h</span>
             </div>
           </div>
@@ -49,7 +53,11 @@
               <div class="search-item_name">Product Designer</div>
             </div>
             <div class="search-item_column">
-              <button class="search-item_fav-button"></button>
+              <button class="search-item_fav-button">
+                <svg class="fav-button" width="15.1" height="13.8" viewBox="0 0 15.1 13.8" fill="#C8C6DE" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11.0552 1.09835e-08C10.3402 0.00012472 9.63818 0.190537 9.02116 0.551683C8.40413 0.912829 7.89435 1.4317 7.54415 2.055C7.19388 1.43155 6.68394 0.912586 6.06672 0.55143C5.4495 0.190275 4.74727 -5.27909e-05 4.03215 1.09835e-08C2.93693 0.0591506 1.90667 0.53826 1.15569 1.33766C0.404716 2.13707 -0.00916265 3.19522 0.000153943 4.292C0.000153943 9.885 7.54415 13.787 7.54415 13.787C7.54415 13.787 15.0882 9.887 15.0882 4.292C15.0975 3.19506 14.6834 2.13676 13.9323 1.33733C13.1811 0.537904 12.1506 0.0589022 11.0552 1.09835e-08V1.09835e-08Z" />
+                </svg>
+              </button>
               <span class="search-item_date">12h</span>
             </div>
           </div>
@@ -60,7 +68,11 @@
               <div class="search-item_name">Senior Ux Designer</div>
             </div>
             <div class="search-item_column">
-              <button class="search-item_fav-button"></button>
+              <button class="search-item_fav-button">
+                <svg class="fav-button fav-button_active" width="15.1" height="13.8" viewBox="0 0 15.1 13.8" fill="#C8C6DE" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11.0552 1.09835e-08C10.3402 0.00012472 9.63818 0.190537 9.02116 0.551683C8.40413 0.912829 7.89435 1.4317 7.54415 2.055C7.19388 1.43155 6.68394 0.912586 6.06672 0.55143C5.4495 0.190275 4.74727 -5.27909e-05 4.03215 1.09835e-08C2.93693 0.0591506 1.90667 0.53826 1.15569 1.33766C0.404716 2.13707 -0.00916265 3.19522 0.000153943 4.292C0.000153943 9.885 7.54415 13.787 7.54415 13.787C7.54415 13.787 15.0882 9.887 15.0882 4.292C15.0975 3.19506 14.6834 2.13676 13.9323 1.33733C13.1811 0.537904 12.1506 0.0589022 11.0552 1.09835e-08V1.09835e-08Z"/>
+                </svg>
+              </button>
               <span class="search-item_date">24h</span>
             </div>
           </div>
@@ -71,19 +83,23 @@
               <div class="search-item_name">Visual Designer</div>
             </div>
             <div class="search-item_column">
-              <button class="search-item_fav-button"></button>
+              <button class="search-item_fav-button">
+                <svg class="fav-button" width="15.1" height="13.8" viewBox="0 0 15.1 13.8" fill="#C8C6DE" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11.0552 1.09835e-08C10.3402 0.00012472 9.63818 0.190537 9.02116 0.551683C8.40413 0.912829 7.89435 1.4317 7.54415 2.055C7.19388 1.43155 6.68394 0.912586 6.06672 0.55143C5.4495 0.190275 4.74727 -5.27909e-05 4.03215 1.09835e-08C2.93693 0.0591506 1.90667 0.53826 1.15569 1.33766C0.404716 2.13707 -0.00916265 3.19522 0.000153943 4.292C0.000153943 9.885 7.54415 13.787 7.54415 13.787C7.54415 13.787 15.0882 9.887 15.0882 4.292C15.0975 3.19506 14.6834 2.13676 13.9323 1.33733C13.1811 0.537904 12.1506 0.0589022 11.0552 1.09835e-08V1.09835e-08Z"/>
+                </svg>
+              </button>
               <span class="search-item_date">24h</span>
             </div>
           </div>
         </div>
       </div>
-      <nav class="tabbar">
+      <nav class="tabbar">        
         <ul class="tabbar_list">
           <li class="tabbar_item_home">
-            <svg class="tabbar_item" width="20" height="20" viewBox="0 0 20 20" fill="#A8A8AA" xmlns="http://www.w3.org/2000/svg">
+            <svg class="tabbar_item tabbar_item_active" width="20" height="20" viewBox="0 0 20 20" fill="#A8A8AA" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M7.13478 18.7733V15.7156C7.13478 14.9351 7.77217 14.3023 8.55844 14.3023H11.4326C11.8102 14.3023 12.1723 14.4512 12.4393 14.7163C12.7063 14.9813 12.8563 15.3408 12.8563 15.7156V18.7733C12.8539 19.0978 12.9821 19.4099 13.2124 19.6402C13.4427 19.8705 13.7561 20 14.0829 20H16.0438C16.9596 20.0023 17.8388 19.6428 18.4872 19.0008C19.1356 18.3588 19.5 17.487 19.5 16.5778V7.86686C19.5 7.13246 19.1721 6.43584 18.6046 5.96467L11.934 0.675869C10.7737 -0.251438 9.11111 -0.221498 7.98539 0.746979L1.46701 5.96467C0.872741 6.42195 0.517552 7.12064 0.5 7.86686V16.5689C0.5 18.4639 2.04738 20 3.95617 20H5.87229C6.55123 20 7.103 19.4562 7.10792 18.7822L7.13478 18.7733Z"/>
-            </svg>
+            </svg>            
           </li>
           <li class="tabbar_item_statistic">
             <svg class="tabbar_item" width="22" height="20" viewBox="0 0 22 20" fill="#A8A8AA" xmlns="http://www.w3.org/2000/svg">
@@ -105,6 +121,7 @@
           </li>
         </ul>
       </nav>
+      <div class="tabbar-shadow"></div>
       <div class="filter-window translate-down">
         <div class="filter-window_line">
           <svg width="80" height="4" viewBox="0 0 80 4" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -192,7 +209,7 @@
         <div class="filter-authors">
           <p class="filter-authors_title">Автор</p>
           <div class="filter-authors_list">
-            <div class="filter-authors_item">
+            <div class="filter-authors_item filter-authors_item_active">
               <p class="filter-authors_name">Google</p>
             </div>
             <div class="filter-authors_item">
@@ -204,7 +221,7 @@
             <div class="filter-authors_item">
               <p class="filter-authors_name">Facebook</p>
             </div>
-            <div class="filter-authors_item">
+            <div class="filter-authors_item filter-authors_item_active">
               <p class="filter-authors_name">Remote</p>
             </div>
             <span class="filter-authors_all">Все</span>
