Add map page, add pages transitions

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
       <button class="login-form_password-view-button"></button>      
     </form>
     <a href="#" class="login-page_forgot-link">Забыли пароль?</a>
-    <button onclick="document.location='search.html'" class="login-page_primary-button primary-button">Войти</button>
+    <button onclick="document.location='map.html'" class="login-page_primary-button primary-button">Войти</button>
     <div class="social-login">
       <div class="social-login__title">
         <svg class="social-login__title_line width=" 20" height="2" viewBox="0 0 20 2" fill="none" xmlns="http://www.w3.org/2000/svg">
