--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
       <input type="password" placeholder="Пароль" class="login-form_input login-form_password-input">
       <button class="login-form_password-view-button"></button>
     </form>
-    <button class="signup-page_primary-button primary-button">Зарегестрироваться</button>
+    <button onclick="document.location='map.html'" class="signup-page_primary-button primary-button">Зарегестрироваться</button>
     <div class="social-login">
       <div class="social-login__title">
         <svg class="social-login__title_line width=" 20" height="2" viewBox="0 0 20 2" fill="none"
