Edit map structure, add interactive recomendation in tests page

--- a/map.html
+++ b/map.html
@@ -73,9 +73,7 @@
           </svg>
         </div>
       </div>
-      <button class="map-page_primary-button primary-button">
-        Все тесты
-      </button>
+
       <div class="map-results">
         <div onclick="document.location='tests.html'" class="map-results_element1">
           <div class="map-results_main">
@@ -114,6 +112,9 @@
           </p>
         </div>
       </div>
+      <button class="map-page_primary-button primary-button">
+        Все тесты
+      </button>
       <div class="map-area_second">
         <div class="map-area__info">
           <h2 class="map-area__info_name">3. A/B test</h2>
@@ -177,6 +178,7 @@
     </nav>
     <div class="tabbar-shadow"></div>
   </div>
+  <script src="./script/script.js"></script>
 </body>
 
 </html>
