--- a/map.html
+++ b/map.html
@@ -179,6 +179,7 @@
       </ul>
     </nav>
     <div class="tabbar-shadow"></div>
+    <div class="tabbar_item_under"></div>
   </div>
   <script src="./script/script.js"></script>
 </body>
